language/move-lang/tests/move_check/expansion/restricted_module_alias_names.exp
error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_module_alias_names.move:2:20
  │
2 │     use 0x42::M as Self;
  │                    ^^^^ Invalid module alias name 'Self'. 'Self' is restricted and cannot be used to name a module alias

error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_module_alias_names.move:3:20
  │
3 │     use 0x42::M as vector;
  │                    ^^^^^^ Invalid module alias name 'vector'. 'vector' is restricted and cannot be used to name a module alias

