language/move-lang/tests/move_check/expansion/restricted_module_alias_names.move
module 0x42::M {
    use 0x42::M as Self;
    use 0x42::M as vector;
}
